Alteração Diagrama de Classes
- Alteração do diagrama de classes
- Alteração do EER
-Alteração do Caso de Uso Login

--- a/documentacao/documentoweb2015/05-documentacao-sistema/index.html
+++ b/documentacao/documentoweb2015/05-documentacao-sistema/index.html
@@ -39,13 +39,13 @@
 			  <!-- Default panel contents -->
 			  <div class="panel-heading"><h1>Documentação de Software do projeto Partiu!</h1></div>
 			  <div class="panel-body">
-			  	<span><a href="#">05-doc-sistema</a></span>
+			  	<span><a href="#">05-documentacao-sistema</a></span>
 			  </div>
 
 			  <!-- List group -->
 			  <ul class="list-group">
 				<li class="list-group-item">
-					Este documento tem todo o conteúdo explicativo do sistema para poder facilitar o entendimento completo do aplicativo adquirindo conhecimento e especificação para realizar evoluções e manutenções futuras. 	
+					Neste documento encontram-se as documentações técnicas do software desenvolvido, incluindo o levantamento de requisitos, casos de uso e os diagramas de classe e o modelo de entidade relacionamento (EER), entre outros documentos. 	
 					<br>
 					<a href=><b>5.1-Requisitos</b></a> 
 					<br>
@@ -57,7 +57,7 @@
 					<br> 
 					<a href=><b>5.2-Projeto</b></a>
 					<br>
-					<a href="5.2-projeto\5.2.1- Modelo de Classes\diagrama de classes.html">5.2.1 - Modelo de Classes</a>
+					<a href="5.2-projeto\5.2.1- Modelo de Classes\diagrama de classes.html">5.2.1 - Diagrama de Classes</a>
 					<br>
 					<a href="5.2-projeto\5.2.2 - Modelo ER do banco de dados\modelo eer.html">5.2.2 - Modelo E/R do banco de dados</a>
 					<br>
