--- a/documentacao/documentoweb2015/06-tutorial/index.html
+++ b/documentacao/documentoweb2015/06-tutorial/index.html
@@ -45,9 +45,9 @@
 			  <!-- List group -->
 			  <ul class="list-group">
 				<li class="list-group-item">
-					Neste capítulo temos o tutorial de uso do software, deixando explicito  o funcionamento de todas telas com suas respectivas funcionalidades, apresentando também as restrições existentes para acesso a cada interação, não deixando assim o usuário obter qualquer utilização indevida ou errada. 	
+					O tutorial do software Partiu! foi elaborado para orientar os "primeiros passos" do usuário em sua experiência com o uso do software Partiu!	
 					<br>
-					<a href="Partiu.pptx">Tutorial</a>		    	
+					<a href="Partiu.pptx">6.1-tutorial</a>		    	
 			    </li>
 			  </ul>
 
