--- a/documentacao/documentoweb2015/06-tutorial/index.html
+++ b/documentacao/documentoweb2015/06-tutorial/index.html
@@ -47,7 +47,7 @@
 				<li class="list-group-item">
 					O tutorial do software Partiu! foi elaborado para orientar os "primeiros passos" do usuário em sua experiência com o uso do software Partiu!	
 					<br>
-					<a href="Partiu.pptx">6.1-tutorial</a>		    	
+					<a href="Partiu.pdf">6.1-tutorial</a>		    	
 			    </li>
 			  </ul>
 
