Atualização das Versoes Antigas
Atualização das Versoes Antigas

--- a/documentacao/documentoweb2015/01-introducao/index.html
+++ b/documentacao/documentoweb2015/01-introducao/index.html
@@ -51,7 +51,7 @@
 					<br>
 				     -  Everton de Grande,
 					<br>
-					 -  Jacqueline Loprete Avansi,
+					 -  Jacqueline Avansi Loprete,
 					<br>
 					 -  Paul Kibe Kjuguna,
 					<br>
