atualização da documentação.

--- a/documentacao/documentoweb2015/01-introducao/index.html
+++ b/documentacao/documentoweb2015/01-introducao/index.html
@@ -66,7 +66,7 @@
 			    	<br>
 			    	<p style="justify-content: all">
 			    	Este documento representa a especificação de requisitos para a construção de um aplicativo para a plataforma mobile.<br>
-			    	Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos e reservas de passeios, excursões, entre outros eventos turísticos ou de negócio, com o intento de promover o turismo, divulgando e facilitando sua exploração.
+			    	Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos, passeios, excursões, entre outros eventos turísticos ou de negócio, com o intento de promover o turismo, divulgando e facilitando sua exploração.
                      </p>
 			    </li>	
 			  </ul>
