--- a/documentacao/documentoweb2015/05-documentacao-sistema/5.1-requisitos/5.1.3 - Outros documentos e requisitos/levantamento de requisitos.html
+++ b/documentacao/documentoweb2015/05-documentacao-sistema/5.1-requisitos/5.1.3 - Outros documentos e requisitos/levantamento de requisitos.html
@@ -51,7 +51,7 @@
 							
 							<h2>Objetivos Gerais</h2>
 
-							Este aplicativo se destina ao turista. Usuario de celulares. A razão  de existir é para ser um facilitador ao turista.
+							Sua função é apoiar a gestão de viagens, hospedagens, deslocamentos, agendamentos, passeios, excursões, entre outros eventos turísticos ou de negócio com o intento de promover o turismo, divulgando e facilitando sua exploração.
 							
 							<h2> Requisitos Funcionais</h2>
 							<br>
