--- a/documentacao/documentoweb2015/05-documentacao-sistema/5.2-projeto/5.2.4 - Outros documentos de Projeto/5.2.4.1-sprints/sprints.html
+++ b/documentacao/documentoweb2015/05-documentacao-sistema/5.2-projeto/5.2.4 - Outros documentos de Projeto/5.2.4.1-sprints/sprints.html
@@ -64,7 +64,7 @@ th, td {
     </ul>
     <div id="my-tab-content" class="tab-content">
         <div class="tab-pane active" id="sprint1">
-   <h1>SRINT 1</h1>
+   <h1>SPRINT 1</h1>
    <hr>
    <table>
     <tr>
